--- a/models_notebook.qmd
+++ b/models_notebook.qmd
@@ -70,7 +70,6 @@ tabularise$headtail(Fish_data)
 <!--% Chaque étudiant réalise et interprète un graphique pertinent en lien avec le but fixé et les modèles qui seront réalisés. Graphique et interprétation de l'étudiant #1 ci-dessous. -->
 
 ```{r chart1 Amal}
-```{r chart1 }
 
 # Relation entre rapport d’aspect et étroitesse du pédoncule caudal
 chart(data = Fish_data,
@@ -142,7 +141,6 @@ Les pélagiques ou démersaux n’ont pas cette pression et donc des yeux plus p
 <!--% Graphique et interprétation de l'étudiant #3 ci-dessous. -->
 
 ```{r chart3 Christelle}
-```{r chart3 }
 chart(data = Fish_data, Profondeur_corps ~ Comportement_banc | Ordre) +
   geom_boxplot () + labs(
     x = "Comportement de banc",
@@ -159,7 +157,6 @@ chart(Fish_data, Profondeur_corps ~ Comportement_banc %fill=% Comportement_banc 
   )
     title = "Profondeur du corps selon le comportement de banc et l’ordre")
 ```
-
 
 ... interprétation #3...
 
@@ -184,7 +181,6 @@ plot(Fish_data_corr, type = "lower")
 
 <!-- Commentez la table des corrélations. -->
 
-
 La plupart des corrélations entre caractères sont faibles à modérées. Le rapport d’aspect et l’étroitesse du pédoncule caudal montrent une corrélation positive notable (r = 0,38), suggérant une adaptation à la nage rapide. La longueur maximale est fortement négativement corrélée avec la taille de l’œil (r = -0,69), tandis que la profondeur du corps est modérément liée à la taille des nageoires pectorales (r = 0,45).
 
 <!--% Chaque modèle doit être décrit à l'aide d'un graphique et d'un tableau résumant le modèle. Les équations paramétrées de tous les modèles doivent être également présentes. L'analyse des résidus sera réalisée et interprétée pour chaque modèle. -->
@@ -204,62 +200,59 @@ Poly1_lm <- lm(data = Fish_data, Longueur_max ~ Taille_oeil + I(Taille_oeil^2))
 summary_(Poly1_lm) |> tabularise()
 
 ```
--Tous les coefficients sont statistiquement significatifs (p-value < au seuil), ce qui signifie que la taille de l’œil et son carré ont un effet significatif sur la longueur maximale.
--Étendue des résidus : [-95.43, 105.6], les résidus sont très larges par rapport aux valeurs prédites, ce qui suggère des erreurs importantes pour certaines observations.
--Le modèle dans son ensemble est significatif (p-value de Statistique F < au seuil alpha) et explique un peu plus de la moitié de la variation de la longueur maximale(R^2 ajusté 54%), ce qui est correct mais laisse encore beaucoup de variabilité non expliquée.
+
+-Tous les coefficients sont statistiquement significatifs (p-value \< au seuil), ce qui signifie que la taille de l’œil et son carré ont un effet significatif sur la longueur maximale. -Étendue des résidus : \[-95.43, 105.6\], les résidus sont très larges par rapport aux valeurs prédites, ce qui suggère des erreurs importantes pour certaines observations. -Le modèle dans son ensemble est significatif (p-value de Statistique F \< au seuil alpha) et explique un peu plus de la moitié de la variation de la longueur maximale(R\^2 ajusté 54%), ce qui est correct mais laisse encore beaucoup de variabilité non expliquée.
 
 ```{r}
 # Visualisation du modèle
 chart(Poly1_lm)
 ```
 
-
 ```{r}
 # Analyse des résidus
 chart$residuals(Poly1_lm)
 ```
 
-- la distribition des residus est très élevé par rapports aux valeurs predites (A)
-- Les points suivent globalement la ligne,sauf pour les grandes valeurs qui s'écartent, donc la normalité est raisonnable.(B)
-- La tendance ascendante montre que la variance augmente avec la valeur prédite il y a hétéroscédasticité modérée.(C)
--Présence des points influents avec une grande distance de cook et un effet de levier.
+-   la distribition des residus est très élevé par rapports aux valeurs predites (A)
+-   Les points suivent globalement la ligne,sauf pour les grandes valeurs qui s'écartent, donc la normalité est raisonnable.(B)
+-   La tendance ascendante montre que la variance augmente avec la valeur prédite il y a hétéroscédasticité modérée.(C) -Présence des points influents avec une grande distance de cook et un effet de levier.
 
 #### Régression linéaire 2
 
 <!--% Ajustez une régression linéaire simple, multiple ou polynomiale par paire d'étudiants dans cette section (donc, deux modèles pour l'équipe de quatre). -->
 
-
 ```{r}
-# Modèle polynomial avec interaction
-Fish_poly <- lm(data = Fish_data, log(Longueur_max) ~ I(Taille_oeil^2) * Vertical_station) 
-summary_(Fish_poly) |> tabularise()
+Fish_poly2 <- lm(data= Fish_data, log(Longueur_max) ~ Taille_oeil + I(Taille_oeil^2))
+summary_(Fish_poly2) |> tabularise()
 
 ```
 
 ```{r}
-#calcul de la valeur prédite du log(Longueur_max)
-#Fish_data$pred <- predict(Fish_poly)
-
 #Visualisation du modele
+chart(data = Fish_data, log(Longueur_max) ~ Taille_oeil) +
+  geom_point() +
+  geom_smooth(
+    method = "lm",
+    formula = y ~ x + I(x^2),
+    se = TRUE,
+    color = "blue"
+  ) +
+  labs(
+    title = "Visualisation du modèle polynomial (log-transformé)",
+    x = "Taille de l'œil",
+    y = "log(Longueur_max)"
+  )
 
-#chart(data = Fish_data, log(Longueur_max) ~ pred %col=% Vertical_station) +
-  #geom_point(alpha = 0.7, size = 2) 
-
-chart(data = Fish_data, log(Longueur_max) ~ Taille_oeil %col=% Vertical_station) +
-  geom_point(alpha = 0.5) +
-  geom_smooth(method = "lm",
-              formula = y ~ poly(x, 2),
-              se = FALSE, size = 1.2) +
-  labs(title = "Régression polynomiale par groupe",
-       x = "Taille œil",
-       y = "log(Longueur_max)")
 
 ```
 
 ```{r}
+#Analyse des residus
+chart$residuals(Fish_poly2)
 ```
 
 Discussion: Amal
+
 #### Modèle linéaire 1
 
 <!--% Construisez un modèle linéaire par paire d'étudiants dans cette section. -->
@@ -272,6 +265,7 @@ chart(data = Fish_data, Longueur_max ~ Profondeur_corps %col=% Comportement_banc
        x = "Profondeur du corps",
        y = "Longueur max (cm)")
 ```
+
 ```{r record='RNCS'}
 chart(data = Fish_data, Longueur_max ~ Rapport_aspect %col=% Vertical_station) +
   geom_point() +
@@ -280,7 +274,6 @@ chart(data = Fish_data, Longueur_max ~ Rapport_aspect %col=% Vertical_station) +
        x = "Rapport d'aspect",
        y = "Longueur max")
 ```
-
 
 ```{r record='RODFS'}
 #Fish_lm <- lm(data = Fish_data, Longueur_max ~ Taille_oeil + Profondeur_corps + Vertical_station + Profondeur_corps * Comportement_banc + Vertical_station * Rapport_aspect) 
@@ -297,23 +290,18 @@ summary_(Fish_lm1) |> tabularise()
 chart$residuals(Fish_lm1)
 ```
 
-
-Discussion: Ide 
-#### Modèle linéaire 2
+Discussion: Ide \#### Modèle linéaire 2
 
 <!--% Construisez un modèle linéaire par paire d'étudiants dans cette section. -->
 
 Amal
+
 ```{r}
 Fish_lm2 <- lm(data = Fish_data, Taille_oeil ~ Longueur_max  * Comportement_banc )
 summary_(Fish_lm2) |> tabularise()
 ```
 
--le pvalue de Fstatistique est inférieur au seuil, le modèle est significatif dans son ensemble.
--R²ajusté = 0.4982 : le modèle explique environ 50% de la variation de la taille d’œil.
--Toutes les variables sont significatives (p < 0.05), donc l’interaction est pertinente.
--Les résidus sont raisonnables (étendue [-13.56, 13.35]), suggérant que le modèle est bien ajusté.
--La taille d’œil est influencée par la longueur du poisson et par le comportement de banc. L’interaction montre que l’effet de la taille du poisson sur l’œil dépend du comportement de banc : schooling et non-schooling.
+-le pvalue de Fstatistique est inférieur au seuil, le modèle est significatif dans son ensemble. -R²ajusté = 0.4982 : le modèle explique environ 50% de la variation de la taille d’œil. -Toutes les variables sont significatives (p \< 0.05), donc l’interaction est pertinente. -Les résidus sont raisonnables (étendue \[-13.56, 13.35\]), suggérant que le modèle est bien ajusté. -La taille d’œil est influencée par la longueur du poisson et par le comportement de banc. L’interaction montre que l’effet de la taille du poisson sur l’œil dépend du comportement de banc : schooling et non-schooling.
 
 ```{r}
 chart(data = Fish_data, Taille_oeil ~ Longueur_max   %col=% Comportement_banc) +
@@ -321,30 +309,26 @@ chart(data = Fish_data, Taille_oeil ~ Longueur_max   %col=% Comportement_banc) +
   stat_smooth(method = "lm", formula = y ~ x)
 ```
 
--Les poissons non-schooling ont une relation plus linéaire et moins raide.
--Les poissons schooling montrent une pente plus prononcée, confirmant l’interaction trouvée dans le modèle (β3).
+-Les poissons non-schooling ont une relation plus linéaire et moins raide. -Les poissons schooling montrent une pente plus prononcée, confirmant l’interaction trouvée dans le modèle (β3).
 
 ```{r}
 # Analyse des résidus
 chart$residuals(Fish_lm2)
 ```
 
-- L'etendue des residus est elevée par rapport aux valeurs prédites 
-- Les résidus suivent à peu près une distribution normale
-- Il n' y a pas de tendance forte, homoscédasticité
-- Il y a présence d'observations influentes par leur distance de cook
-- Une observation a un effet de levier important avec une distance de cook influente
-#### Modèle linéaire généralisé et/ou mixte 1
+-   L'etendue des residus est elevée par rapport aux valeurs prédites
+-   Les résidus suivent à peu près une distribution normale
+-   Il n' y a pas de tendance forte, homoscédasticité
+-   Il y a présence d'observations influentes par leur distance de cook
+-   Une observation a un effet de levier important avec une distance de cook influente \#### Modèle linéaire généralisé et/ou mixte 1
 
 <!--% Élaborez un modèle linéaire généralisé ou mixte par paire d'étudiants dans cette section. -->
 
-Discussion: Amal
-#### Modèle linéaire généralisé et/ou mixte 2
+Discussion: Amal \#### Modèle linéaire généralisé et/ou mixte 2
 
 <!--% Élaborez un modèle linéaire généralisé ou mixte par paire d'étudiants dans cette section. -->
 
-Discusson: Ide
-## Conclusion
+Discusson: Ide \## Conclusion
 
 <!--% Lorsque toutes les analyses sont réalisées, terminez ce bloc-notes avec 3 à 6 phrases de conclusion en rapport avec ce que vous avez observé dans vos analyses. Quels sont les modèles les plus pertinents que vous retenez ? -->
 
