--- a/models_notebook.qmd
+++ b/models_notebook.qmd
@@ -1,5 +1,5 @@
 ---
-title: "___"
+title: "Relations morphologie-comportement chez les poissons des Grands Lacs : (à completer)"
 author: "Amal Abarou, Ide Tchuileng, Christelle Baseka"
 format:
   html:
@@ -28,7 +28,6 @@ Les poissons des Grands Lacs présentent une grande diversité de morphologies e
 Dans ce travail, nous utilisons les données du *FishPass Sortable Attribute Database* (Benoit *et al.*, 2023) qui regroupent des traits morphologiques (par ex. longueur maximale, forme du corps, taille et position des nageoires) ainsi que des traits comportementaux (position verticale dans la colonne d'eau, comportement de banc).
 
 **But** :\
-Nous explorons ici les **relations linéaires** entre certaines caractéristiques morphologiques et certains comportements afin d’évaluer dans quelle mesure la morphologie peut expliquer des stratégies de nage et de déplacement.
 
 ## Matériel et méthodes
 
@@ -53,7 +52,7 @@ if (!"tools:tests" %in% search())
 knitr::opts_chunk$set(dev = "ragg_png")
 
 # Configuration de l'environnement
-SciViews::R("model", lang = "fr")
+SciViews::R("model","infer", lang = "fr")
 ```
 
 <!--% Importez les données que vous aurez préalablement nettoyées, remaniées et labélisées dans le script R nommé `R/import.R`. -->
@@ -69,11 +68,7 @@ tabularise$headtail(Fish_data)
 
 <!--% Chaque étudiant réalise et interprète un graphique pertinent en lien avec le but fixé et les modèles qui seront réalisés. Graphique et interprétation de l'étudiant #1 ci-dessous. -->
 
-<<<<<<< HEAD
 ```{r chart1 }
-=======
-```{r chart1 Amal}
->>>>>>> ceedd79a16072ad294efc2c1c9a6460530498d6b
 
 # Relation entre rapport d’aspect et étroitesse du pédoncule caudal
 chart(data = Fish_data,
@@ -144,23 +139,33 @@ Les pélagiques ou démersaux n’ont pas cette pression et donc des yeux plus p
 
 <!--% Graphique et interprétation de l'étudiant #3 ci-dessous. -->
 
-<<<<<<< HEAD
 ```{r chart3 }
-=======
-```{r chart3 Christelle}
->>>>>>> ceedd79a16072ad294efc2c1c9a6460530498d6b
-chart(data = Fish_data, Profondeur_corps ~ Comportement_banc | Ordre) +
-  geom_boxplot () + labs(
+
+chart(data = Fish_data,
+      Taille_nageoire_pectorale ~ Comportement_banc %fill=% Forme_corps) +
+  geom_boxplot(alpha = 1, width = 0.6, position = position_dodge(0.8)) +
+  labs(
     x = "Comportement de banc",
-    y = "Profondeur du corps (% TL)",
-    title = "Profondeur du corps selon le comportement de banc et l’ordre")
+    y = "Taille de la nageoire pectorale (mm)",
+    title = "Taille des nageoires pectorales selon le comportement et la forme du corps"
+  ) 
 ```
 
 ... interprétation #3...
 
-On voit que selon les ordres de poissons, les espèces qui vivent en banc (schooling) tendent à avoir un corps plus profond que celles qui vivent seules (non-schooling). Cette forme plus profonde aide les poissons à rester stables lorsqu’ils nagent ensemble et à mieux contrôler leurs mouvements dans le banc. Par exemple, chez les Perciformes, la différence est particulièrement visible, alors que chez les Salmoniformes elle est plus faible. Cela suggère que la forme du corps joue un rôle dans la coordination et la cohésion du groupe.
+#### Effet du comportement de banc
 
-*L’analyse des boxplots facettés par ordre montre que la profondeur corporelle (% TL) varie avec le comportement de banc. Pour les Cypriniformes et Perciformes, les individus schooling présentent en moyenne une profondeur corporelle plus élevée que les non-schooling, ce qui pourrait refléter une adaptation morphologique à la nage collective. Cette morphologie est susceptible d’améliorer la stabilité hydrodynamique et la manœuvrabilité lors des déplacements synchronisés. Chez les Salmoniformes, la différence entre les comportements est moins marquée, suggérant une plasticité morphologique moindre ou des contraintes écologiques différentes.*
+-   Les poissons non-schooling présentent des nageoires pectorales plus grandes en moyenne que ceux en schooling, surtout pour la forme *short/deep*.
+
+-   En schooling, la taille des nageoires est plus homogène et réduite, ce qui peut indiquer une adaptation à la nage collective où la manœuvrabilité individuelle est moins cruciale.
+
+    #### Effet de la forme du corps
+
+    -   Short/deep : Ce groupe a les nageoires les plus grandes, particulièrement chez les individus non-schooling (médiane ≈ 0,26 mm). Cela suggère que les poissons à corps court et profond ont besoin de nageoires plus développées pour compenser leur morphologie et assurer la stabilité.
+
+    -   Elongated : Taille intermédiaire, mais avec une forte variabilité chez les non-schooling (médiane ≈ 0,18 mm, mais étendue large). Cela pourrait refléter des stratégies variées selon l’habitat ou le comportement.
+
+    -   Fusiform : Les nageoires sont les plus petites et les plus constantes (≈ 0,17 mm), ce qui est cohérent avec une forme hydrodynamique favorisant la nage rapide sans nécessiter de grandes nageoires.
 
 ### Modélisation
 
@@ -249,11 +254,7 @@ chart$residuals(Fish_poly2)
 
 Discussion: Amal
 
-<<<<<<< HEAD
-\#### Modèle linéaire 1
-=======
-#### Modèle linéaire 1
->>>>>>> ceedd79a16072ad294efc2c1c9a6460530498d6b
+Modèle linéaire 1
 
 <!--% Construisez un modèle linéaire par paire d'étudiants dans cette section. -->
 
@@ -292,19 +293,14 @@ summary_(Fish_lm1) |> tabularise()
 chart$residuals(Fish_lm1)
 ```
 
-<<<<<<< HEAD
 Discussion: Ide
 
-\#### Modèle linéaire 2
-=======
-Discussion: Ide \#### Modèle linéaire 2
->>>>>>> ceedd79a16072ad294efc2c1c9a6460530498d6b
+Modèle linéaire 2
 
 <!--% Construisez un modèle linéaire par paire d'étudiants dans cette section. -->
 
-Amal
-
 ```{r}
+
 Fish_lm2 <- lm(data = Fish_data, Taille_oeil ~ Longueur_max  * Comportement_banc )
 summary_(Fish_lm2) |> tabularise()
 ```
@@ -325,40 +321,49 @@ chart$residuals(Fish_lm2)
 ```
 
 -   L'etendue des residus est elevée par rapport aux valeurs prédites
+
 -   Les résidus suivent à peu près une distribution normale
+
 -   Il n' y a pas de tendance forte, homoscédasticité
+
 -   Il y a présence d'observations influentes par leur distance de cook
--   Une observation a un effet de levier important avec une distance de cook influente \#### Modèle linéaire généralisé et/ou mixte 1
+
+-   Une observation a un effet de levier important avec une distance de cook influente
+
+    \#### Modèle linéaire généralisé et/ou mixte 1
 
 <!--% Élaborez un modèle linéaire généralisé ou mixte par paire d'étudiants dans cette section. -->
 
-Discussion: Amal \#### Modèle linéaire généralisé et/ou mixte 2
+Discussion: Amal
+
+\#### Modèle linéaire généralisé et/ou mixte 2
 
 <!--% Élaborez un modèle linéaire généralisé ou mixte par paire d'étudiants dans cette section. -->
 
-<<<<<<< HEAD
 ```{r}
 Fish_data$Comportement_banc_num <- ifelse(Fish_data$Comportement_banc == "schooling", 1, 0)
 
-Fish_glm <- glm(Comportement_banc_num ~ Longueur_max * Taille_nageoire_pectorale,
-    data = Fish_data, family = binomial())
-summary_(Fish_glm) |> tabularise()
+Fish_glm2 <- glm(data = Fish_data, Comportement_banc_num ~ Longueur_max * Taille_nageoire_pectorale,
+    family = binomial())
+summary_(Fish_glm2) |> tabularise()
 
-#Analyse logistique du comportement grégaire en fonction des traits morphologiques
-
+#Fish_data$Prob_predite <- predict(Fish_glm2, type = "response")
 chart(data = Fish_data,
       Comportement_banc_num ~ Longueur_max %col=% Taille_nageoire_pectorale ) +
-  geom_jitter(height = 0.05, alpha = 0.6) +
+  geom_point(size = 2, alpha = 0.7) +
+  scale_color_viridis_c() +
+ geom_smooth(method = "glm", formula = y ~ x, se = TRUE, color = "magenta") +
   labs(
     x = "Longueur maximale (cm)",
     y = "Comportement de banc (0 = non, 1 = schooling)",
-    title = "Distribution du comportement schooling en fonction de la longueur"
+    title = "Probabilité prédite du comportement en banc en fonction de la longueur et de la taille de la nageoire pectorale"
   )
+
 ```
 
-=======
->>>>>>> ceedd79a16072ad294efc2c1c9a6460530498d6b
-Discusson: Ide \## Conclusion
+Discussion: Ide
+
+\## Conclusion
 
 <!--% Lorsque toutes les analyses sont réalisées, terminez ce bloc-notes avec 3 à 6 phrases de conclusion en rapport avec ce que vous avez observé dans vos analyses. Quels sont les modèles les plus pertinents que vous retenez ? -->
 
